# effmass

./: .gitignore  .gitmodules  ACKNOWLEDGMENT.md  AGENTS.md  CMakeLists.txt  LICENSE
.kimi/skills/: cpp23-modules-cmake.skill
.kimi/skills/cpp23-modules-cmake/: SKILL.md
.kimi/skills/cpp23-std-module-manual/: SKILL.md
docs/: ideas.md  index.md  progress.md  roadmap.md
docs/design/: conventions.md  cpp_conventions.md  cpp_naming_conventions.md  hamiltonian.md  io_cppm_design.md  io_file_lifecycle.md  io_module.md  lattice_vectors_indexConvention.md  multi_dimensional_array.md  physical_constants.md  pseudo_module.md  real_spherical_harmonics.md  upf_vs_binary_io.md  utils_types.md
docs/note/: atomic_units.md  clangd_cpp23_modules.md  file_formats.md  fortran_record_format.md  plane_wave_sign_conventions.md  upf_format.md
docs/proposal/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md
docs/reference/: plot_wg.f90  unified_pseudopotential_format.md
docs/reference/convert_wg2rho/: Makefile  cfft.f90  cfftd.f90  convert_wg2rho.f90
docs/reference/upf2upfSO/: Makefile  Makefile.bisheng  atom_base.f90  cal_ityp.f90  check_atom_mov.f90  control_config.f90  error_message.f90  file_unit.f90  gen_element_name_number.f90  libxc_check.f90  main_replace_ppbeta.f90  main_replace_ppchi.f90  modlibxc.f90  pse_pot_config.f90  read_atom_file.f90  read_control_file.f90  read_upf_v2.f90  read_uspp_head.f90  read_vwr_head.f90  upf2upfSO.f90  upfpsp_module.f90  write_upf_v2.f90  xc.f90
src/: H_psi.cppm  io.cppm  math.cppm  physical_constants.hpp  pseudo.cppm  transform.cppm
src/H_psi/: hamiltonian.cpp  hamiltonian.cppm  hamiltonian_callable.cpp  hamiltonian_gradient.cpp  hamiltonian_hessian.cpp  structure_factor.cppm
src/io/: ATOM.cppm  EIGEN.cppm  GKK.cppm  OCC.cppm  RHO.cppm  VR.cppm  WG.cppm  lattice.cppm
src/math/: fft.cppm  fourier_bessel.cppm  linalg.cppm  numerical.cppm  sph_bessel.cppm  sph_harmonics.cppm
src/pseudo/: ncpp-upf.cppm  ncpp.cppm  ncpp_advance.cppm  paw-upf.cppm  uspp-upf.cppm
src/pseudo/io/: ncpp.upf.cppm  paw.upf.cppm  upf.cppm  uspp.upf.cppm
src/support/: density.cppm
src/transform/: fft.cppm  fft3d.cppm  sph_bessel.cppm  sph_harmonics.cppm
src/utils/: array2d.cppm  logger.cppm  matrix.cppm  vector3d.cppm
test/: CMakeLists.txt  test_eigen.cpp  test_hamiltonian.cpp  test_io_eigen.cpp  test_io_gkk.cpp  test_io_ncpp.cpp  test_io_rho.cpp  test_io_wg.cpp  test_lattice.cpp  test_math.cpp  test_ncpp.cpp  test_ncpp_upf.cpp  test_rho.cpp  test_transform.cpp  test_wg_fft.cpp
test/H_psi/: test_hamiltonian.cpp  test_hgrad_eigen_fd.cpp  test_hpsi_eigen.cpp  test_structure_factor.cpp
test/data_io-local/: OUT.EIGEN  OUT.GKK  OUT.RHO  OUT.VR
test/data_io-nonlocal/: OUT.GKK  OUT.OCC_SPIN2  OUT.VR  OUT.WG2RHO_1_16  OUT.WG2RHO_8_17
test/data_io_upf/: Pb.PD04.PBE.SOC.upfSO  Si-PD04-FR.upf
test/data_nonscf/: IN.VR  IN1.KPT  IN2.KPT  OUT1.EIGEN  OUT1.GKK  OUT2.EIGEN  OUT2.GKK  atom.config
test/data_scf/: OUT.OCC  OUT.RHO  atom.config
test/data_upf/: .Si-PD04-FR.upf.upf2upfSO
test/io/: occ_reader.hpp  test_atom.cpp  test_eigen.cpp  test_eigen_occ.cpp  test_gkk.cpp  test_rho.cpp  test_wg.cpp
test/math/: test_fft.cpp  test_fourier_bessel.cpp  test_linalg.cpp  test_sph_bessel.cpp  test_sph_harmonics.cpp
test/pseudo/: test_ncpp.cpp  test_ncpp_upf2upfSO.cpp
test/pseudo/io/: test_ncpp_upf.cpp  test_soc_upf.cpp
test/test_io/: OUT.EIGEN  OUT.RHO  OUT.VR
test/test_io-nonlocal/: OUT.EIGEN
tools/: count_lines.sh  parse_hpsi_debug.awk  parse_hpsi_debug.sh  print_records.cpp  read_eigen.cpp
